# devcontainer-tool

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: deploy_docs.yaml  pull_request.yaml
_sources/content/: faq.rst.txt  quickstart.rst.txt
_sources/content/contributing/: contributing.rst.txt  plugins_and_extensions.rst.txt
_sources/content/plugin_system/: plugin_system.rst.txt
content/: faq.html  quickstart.html
content/contributing/: contributing.html  docs.html  plugins_and_extensions.html
content/plugin_system/: plugin_system.html
devc/: cli.py  devcontainer_json_creation_service.py  dockerfile_creation_service.py  template_loader.py
devc/constants/: defaults.py  images.py  plugin_constants.py  templates.py
devc/constants/templates/: .repos.j2  Dockerfile.j2  content.repos.j2  devcontainer_extensions.json
devc/core/: devcontainer_json_creation_service.py  dockerfile_creation_service.py  file_handler_interface.py  logging.py  template_loader.py  template_machine.py
devc/core/error/: errors.py
devc/core/exceptions/: devc_exceptions.py  devcontainer_json_exception.py  dockerfile_exceptions.py
devc/core/models/: devcontainer_extension_json_scheme.py  devcontainer_json_options.py  dockerfile_extension_json_scheme.py  dockerfile_options.py  options.py
devc/models/: devcontainer_extension_json_scheme.py  dockerfile_extension_json_scheme.py
devc/utils/: argparse_helpers.py  argparse_validators.py  console.py  docker_utils.py  dockerfile_extension_json_scheme.py  file_handler_interface.py  json_parsing.py  logging.py  merge_dicts.py  path_utils.py  string_formatting.py  substitute_placeholders.py
devc_cli_plugin_system/: cli.py  constants.py  entry_points.py  interactive_creation.py  plugin_system.py
devc_cli_plugin_system/command/: __init__.py  extension_points.py  extensions.py
devc_cli_plugin_system/interactive_creation/: interaction_provider.py  interactive_creation.py
devc_cli_plugin_system/plugin/: __init__.py  plugin_context.py
devc_cli_plugin_system/plugin_extensions/: __init__.py  extension_manager.py
devc_cli_plugin_system/verb/: __init__.py
devc_plugins/commands/: container_cmd.py  dev_json_cmd.py  dockerfile_cmd.py  image_cmd.py
devc_plugins/plugins/: dev_json_plugin_base.py  dockerfile_plugin_base.py
doc/: userdoc.rst
docs/: Makefile  conf.py  index.rst
docs/content/: faq.rst  quickstart.rst
ros2_devcontainer_cli/: cli.py  entry_points.py  plugin_system.py
ros2_devcontainer_cli/command/: __init__.py  extension_points.py  extensions.py
ros2_devcontainer_cli/verb/: __init__.py
ros2_devcontainer_commands/container/: container_cmd.py
templates/: .devcontainer.json.j2  .env.j2  Dockerfile.j2  content.repos.j2  devcontainer.json.j2  devcontainer_extensions.json  docker_extension.json  dockerfile_extensions.json  ros2_Dockerfile.j2
test/: test_list_containers.py
(+29 files in other folders)
